[metadata]
name = django-pygments-renderer
version = attr: pygments_renderer.__version__

url = https://github.com/c-bata/django-pygments-renderer
author = Masashi Shibata
author_email = m.shibata1020@gmail.com
description = Provides functionality for syntax highlighting using Pygments.
long_description = file: README.rst
license = MIT License
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Environment :: Web Environment
    Framework :: Django
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    Django
    pygments

[flake8]
max-line-length = 120
exclude =
    .tox/,
    venv/,
    .eggs,
    build/,
    dist/,
